[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tactic"
version = "0.1.0"
description = "Token-level Allocation of Critical/Trivial for Inference Control"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tactic"] 